styles: bordered blocks

--- a/apps/pattern-lab--workshop/src/_patterns/04-page-examples/50-pega-world/facts.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/04-page-examples/50-pega-world/facts.twig
@@ -51,13 +51,13 @@
     </li>
     <li class="c-pw-blocks__item">
       <p class="c-bolt-text c-bolt-text--center">
-        <a href="https://www.pega.com/events/pegaworld/event-details/why-attend" class="c-bolt-button c-bolt-button--primary">Register now</a>
+        <a href="https://www.pega.com/events/pegaworld/event-details/why-attend" class="c-bolt-button c-bolt-button--primary c-bolt-button--full">Register now</a>
       </p>
       <p class="c-bolt-text c-bolt-text--center">
-        <a href="https://www.pega.com/events/pegaworld/event-details/why-attend" class="c-bolt-button c-bolt-button--secondary">FAQ</a>
+        <a href="https://www.pega.com/events/pegaworld/event-details/why-attend" class="c-bolt-button c-bolt-button--secondary c-bolt-button--full">FAQ</a>
       </p>
       <p class="c-bolt-text c-bolt-text--center">
-        <a href="https://www.pega.com/events/pegaworld/event-details/why-attend" class="c-bolt-button c-bolt-button--secondary">Book your hotel</a>
+        <a href="https://www.pega.com/events/pegaworld/event-details/why-attend" class="c-bolt-button c-bolt-button--secondary c-bolt-button--full">Book your hotel</a>
       </p>
     </li>
   </ul>
