--- a/apps/pattern-lab--workshop/src/_patterns/04-page-examples/50-pega-world/pega-world.scss
+++ b/apps/pattern-lab--workshop/src/_patterns/04-page-examples/50-pega-world/pega-world.scss
@@ -231,8 +231,11 @@
 
 .c-pw-blocks__item {
   @include bolt-margin(0);
-  @include bolt-padding(medium);
+  @include bolt-padding(large);
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
   & + #{&} {
     border-left-width: $bolt-border-width;
