--- a/apps/bolt-site--storefront/templates/site.scss
+++ b/apps/bolt-site--storefront/templates/site.scss
@@ -115,7 +115,8 @@ $storefront-sidebar-width: 320px;
   }
 
   .sub-nav > h2 {
-    background-color: bolt-color(gray, light);
+    color: #FFF;
+    background-color: bolt-color(indigo);
     border-bottom: 1px solid #FFF;
     padding: 10px 20px;
     margin: 0;
