--- a/apps/bolt-site--storefront/templates/partials/_sub-nav.scss
+++ b/apps/bolt-site--storefront/templates/partials/_sub-nav.scss
@@ -6,10 +6,14 @@
   &__link {
     font-size: 1.11rem;
     line-height: 1.25;
-    font-weight: 500;
+    font-weight: 300;
 
     &--active-path {
-      text-decoration: underline;
+      color: #545DA6;
+      font-weight: 600;
+      &+.sub-nav__list--depth-3 {
+        border-left: 2px solid #535ca6;
+      }
     }
     &--active {
       font-weight: bolder;
@@ -31,11 +35,9 @@
     }
     .sub-nav__list--depth-1 & {
       font-size: 1.25rem;
-      font-weight: 600;
     }
     .sub-nav__list--depth-2 & {
       font-size: 0.9rem;
-      font-weight: 300;
 
       &.sub-nav__link--active {
         color: #545DA6;
@@ -55,6 +57,9 @@
     &--depth-3 {
       margin-top: 0.25rem;
       margin-bottom: 0.25rem;
+      border-left: 2px solid transparent;
+      margin-left: 0.25rem;
+      padding-left: 2rem;
     }
   }
 
