add several items to twig extra extensions docs

--- a/apps/bolt-site--storefront/templates/default.twig
+++ b/apps/bolt-site--storefront/templates/default.twig
@@ -12,6 +12,8 @@
 
 {% endset %}
 
+{{ console_log(page, 'error', ['meta', 'parent'], true) }}
+
 {% include 'site.twig' with {
   content: content,
 } %}
