cleanup bolt-bolt

--- a/apps/pattern-lab--workshop/src/styles/pl.scss
+++ b/apps/pattern-lab--workshop/src/styles/pl.scss
@@ -9,6 +9,10 @@ bolt-demo {
   padding: 1.65rem 2rem;
 }
 
+.sg-main {
+  @include bolt-padding(medium);
+}
+
 ul.bolt-icon-list-demo {
   display: flex;
   flex-wrap: wrap;
