Docs - home main logo icon tweak

--- a/apps/bolt-site--storefront/templates/site.scss
+++ b/apps/bolt-site--storefront/templates/site.scss
@@ -10,6 +10,12 @@ $storefront-sidebar-width: 320px;
 .storefront-docs-title {
   padding: 15px 20px;
 
+  &--main {
+    bolt-icon {
+      color: bolt-color(yellow);
+    }
+  }
+
   bolt-icon {
     margin-right: 7px;
   }
