--- a/apps/bolt-site--storefront/templates/site.twig
+++ b/apps/bolt-site--storefront/templates/site.twig
@@ -52,8 +52,8 @@
 
 
 <header class="storefront-docs-header {{ currentUrl != 'index.html' ? 't-bolt-dark' : 't-bolt-xdark' }}">
-  <h1 class="storefront-docs-title u-bolt-margin-right-auto@small">
-    <a href="/">
+  <h1 class="storefront-docs-title storefront-docs-title--main u-bolt-margin-right-auto@small">
+    <a class="" href="/">
     {% include "@bolt-components-icon/icon.twig" with {
       name: "energy",
       size: "medium",
