Docs - homepage card adjustments

--- a/apps/bolt-site--storefront/templates/partials/_sub-nav.scss
+++ b/apps/bolt-site--storefront/templates/partials/_sub-nav.scss
@@ -38,6 +38,8 @@
     }
     .sub-nav__list--depth-2 & {
       font-size: 0.9rem;
+      display: block;
+      margin: 0.5rem 0;
 
       &.sub-nav__link--active {
         color: #545DA6;
