--- a/apps/bolt-site--storefront/templates/site.twig
+++ b/apps/bolt-site--storefront/templates/site.twig
@@ -146,7 +146,7 @@
               size: "xsmall",
               weight: "bold",
               tag: "p",
-              text: "Copyright &copy; 2017 Pegasystems, Inc."
+              text: "Copyright &copy;" ~ "now"|date("Y") ~ " Pegasystems, Inc."
             } only %}
           </li>
 
