--- a/apps/bolt-site--storefront/templates/home.twig
+++ b/apps/bolt-site--storefront/templates/home.twig
@@ -116,7 +116,7 @@
           {
             pattern: "image",
             lazyload: false,
-            src: "https://www.pega.com/sites/pega.com/files/thumbnail-forrester-prevcard.jpg"
+            src: "/images/single-source2.jpg"
           },
           {
             pattern: "headline",
@@ -130,7 +130,7 @@
           {
             pattern: "button",
             width: "full",
-            text: "Get the report",
+            text: "View the pattern library",
             style: "secondary"
           }
         ]
@@ -141,23 +141,23 @@
           {
             pattern: "image",
             lazyload: false,
-            src: "https://www.fillmurray.com/g/1200/660"
+            src: "/images/code2.jpg"
           },
           {
             pattern: "teaser",
             headlines: [
             {
               type: "headline",
-              text: "More efficiencie",
+              text: "More efficiencies",
               size: "large"
             }
           ],
             content: "This single-source approach to building out our interface means we can create and iterate faster, whilst empowering engineers to implement design changes and deliver features with minimal upfront design work.",
             buttons: [
             {
-              text: "Learn More About Pega 7",
+              text: "Get started with Bolt",
               style: "secondary",
-              url: "www.google.com/pega7"
+              url: ""
             }
           ]
           }
@@ -169,7 +169,7 @@
           {
             pattern: "image",
             lazyload: false,
-            src: "https://www.fillmurray.com/g/1200/660"
+            src: "/images/tested.jpg"
           },
           {
             pattern: "teaser",
@@ -183,9 +183,9 @@
             content: "The design system has been tried and tested, it’s scalable to all devices, and strives to be AAA compliant with Web Content Accessibility Guidelines.",
             buttons: [
             {
-              text: "Learn More About Pega 7",
+              text: "Visit the component docs",
               style: "secondary",
-              url: "www.google.com/pega7"
+              url: ""
             }
           ]
           }
