Renaming folder: bolt-site--storefront to bolt-site

--- a/apps/bolt-site/templates/site.twig
+++ b/apps/bolt-site/templates/site.twig
@@ -156,7 +156,7 @@
               weight: "bold",
               tag: "p",
               text: include("@bolt-components-link/link.twig", {
-              url: "https://github.com/bolt-design-system/bolt/blob/" ~ gitBranch ~ "/apps/bolt-site--storefront/" ~  page.srcPath,
+              url: "https://github.com/bolt-design-system/bolt/blob/" ~ gitBranch ~ "/apps/bolt-site/" ~  page.srcPath,
               text: "Edit this page on GitHub"}, with_context = false)
             } only %}
           </li>
