Changing www dir for both bolt-site and pattern-lab to www dir at top of repo

--- a/apps/bolt-site/templates/home.twig
+++ b/apps/bolt-site/templates/home.twig
@@ -36,7 +36,7 @@
           buttons: [
             {
               text: "Explore the System",
-              url: "https://bolt.netlify.com",
+              url: "pattern-lab",
               style: "primary",
               width: "full@small"
             },
