--- a/apps/bolt-site/templates/site.twig
+++ b/apps/bolt-site/templates/site.twig
@@ -137,7 +137,7 @@
     fullBleed: false
   } only %}
     {% block band_content %}
-      {% set gitBranch = 'feature/docs-site' %}
+      {% set gitBranch = 'master' %}
 
       <nav>
         <ul class="o-bolt-bare-list" style="flex-flow: row wrap; display: flex; justify-content: space-between; align-items: center;">
